# AviUtl2-AdjustPivot_A

./: .gitignore  CHANGELOG.md  Cargo.toml  LICENSE.txt  README.md  ThirdPartyLicenses.md  about.hbs  about.toml  aulua.yaml  aviutl2.toml  package.txt
.github/workflows/: cache.yaml  release.yaml
script/: 中心ずらし_A.in.anm2
src/: gui.rs  lib.rs  settings.rs
