[package]
name = "中心ずらし_A"
version = "0.1.0"
edition = "2024"

[lib]
crate-type = ["cdylib"]

[dependencies]
anyhow = "1.0.102"
aviutl2 = { version = "0.23.0", features = ["generic"] }
aviutl2-eframe = "0.23.0"
egui_extras = { version = "0.34.1", features = ["all_loaders"] }
iconify = "0.3.1"
regex = "1.12.3"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
